--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "gulp-concat": "^2.6.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-rename": "^1.3.0",
+    "gulp-rename": "^1.4.0",
     "gulp-rev-append": "^0.1.6",
-    "gulp-sass": "^2.1.1",
+    "gulp-sass": "^3.0.0",
     "gulp-uglify": "^1.5.1",
-    "gulp-uglifycss": "^1.0.5",
+    "gulp-uglifycss": "^1.1.0",
     "gulp-uncss": "^1.0.4",
-    "jshint": "^2.8.0"
+    "jshint": "^2.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "natives": "^1.1.6"
+  }
 }
