--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": ""
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "preinstall": "npx npm-force-resolutions"
   },
   "author": "Sean Ockert",
   "homepage": "https://seanockert.com",
@@ -33,5 +34,8 @@
   },
   "dependencies": {
     "natives": "^1.1.6"
+  },
+  "resolutions": {
+    "graceful-fs": "4.2.3"
   }
 }
