Add build command

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": ""
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo \"Test: no build command to run\" && exit 1",
   },
   "author": "Sean Ockert",
   "homepage": "https://seanockert.com",
